--- a/pages/form-validation.html
+++ b/pages/form-validation.html
@@ -42,7 +42,7 @@
                             <a class="nav-link nav-icons"  id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-fw fa-bell"></i> <span class="indicator"></span></a>
                             <ul class="dropdown-menu dropdown-menu-right notification-dropdown">
                                 <li>
-                                    <div class="notification-title"> Notification</div>
+                                    <div class="notification-title"> Notificação</div>
                                     <div class="notification-list">
                                         <div class="list-group">
                                             <a  class="list-group-item list-group-item-action active">
@@ -459,14 +459,14 @@
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="page-header">
-                            <h2 class="pageheader-title">Form Validations </h2>
+                            <h2 class="pageheader-title">Formulario Cliente</h2>
                             <p class="pageheader-text">Proin placerat ante duiullam scelerisque a velit ac porta, fusce sit amet vestibulum mi. Morbi lobortis pulvinar quam.</p>
                             <div class="page-breadcrumb">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Dashboard</a></li>
-                                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Forms</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">Form Validations</li>
+                                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Área Cliente</a></li>
+                                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Cadastro</a></li>
+                                        <li class="breadcrumb-item active" aria-current="page">Formulário</li>
                                     </ol>
                                 </nav>
                             </div>
@@ -483,68 +483,69 @@
                         <!-- ============================================================== -->
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                             <div class="card">
-                                <h5 class="card-header">Bootstrap Validation Form</h5>
+                                <h5 class="card-header">Cadastro Cliente</h5>
                                 <div class="card-body">
-                                    <form class="needs-validation" novalidate>
+                                    <form class="needs-validation" novalidate action="processaF.php" method="GET"  id="contact_form">
                                         <div class="row">
                                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                                                <label for="validationCustom01">First name</label>
-                                                <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
+                                                <label for="validationCustom01">Nome completo</label>
+                                                <input  name="nm_cliente" id="nm_cliente" required="" placeholder="Digite o nome" class="form-control"  type="text" >
                                                 <div class="valid-feedback">
-                                                    Looks good!
+                                                    Correto!
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
+                                                <label for="validationCustom03">CPF</label>
+                                                <input  name="cd_cpf" id="cd_cpf" placeholder="Digite o CPF" class="form-control"  type="text">
+                                                <div class="invalid-feedback">
+                                                    CPF incorreto!.
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
+                                                <label for="validationCustom04">CNPJ</label>
+                                                <input  name="cd_cnpj" id="cd_cnpj" placeholder="Digite o CNPJ" class="form-control"  type="text">
+                                                <div class="invalid-feedback">
+                                                    Please provide a valid state.
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
+                                                <label for="validationCustom05">Celular</label>
+                                                <input name="cd_numero1" id="cd_numero1" placeholder="Digite o numero" required="" class="form-control"  type="text">
+                                                <div class="invalid-feedback">
+                                                    Numero incorreto!.
                                                 </div>
                                             </div>
                                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                                                <label for="validationCustom02">Last name</label>
-                                                <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
-                                                <div class="valid-feedback">
-                                                    Looks good!
-                                                </div>
-                                            </div>
-                                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                                                <label for="validationCustomUsername">Username</label>
+                                                <label for="validationCustomUsername">Email</label>
                                                 <div class="input-group">
                                                     <div class="input-group-prepend">
                                                         <span class="input-group-text" id="inputGroupPrepend">@</span>
                                                     </div>
-                                                    <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
+                                                    <input name="cd_email_cliente" id="cd_email_cliente" placeholder="Email" class="form-control"  type="text">
                                                     <div class="invalid-feedback">
-                                                        Please choose a username.
+                                                        Email incorreto!.
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="form-row">
                                             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                                                <label for="validationCustom03">City</label>
-                                                <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
+                                                <label for="validationCustom03">Placa do Carro</label>
+                                                <input type="text" name="cd_placa" id="cd_placa" placeholder="NUMERO DA PLACA" required="" class="form-control"  type="text">
                                                 <div class="invalid-feedback">
-                                                    Please provide a valid city.
+                                                    Placa do Carro invalida!.
                                                 </div>
                                             </div>
-                                            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                                                <label for="validationCustom04">State</label>
-                                                <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
-                                                <div class="invalid-feedback">
-                                                    Please provide a valid state.
-                                                </div>
-                                            </div>
-                                            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mb-2">
-                                                <label for="validationCustom05">Zip</label>
-                                                <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
-                                                <div class="invalid-feedback">
-                                                    Please provide a valid zip.
-                                                </div>
-                                            </div>
+                                            
                                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                                 <div class="form-group">
                                                     <div class="form-check">
                                                         <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                                                         <label class="form-check-label" for="invalidCheck">
-                                                            Agree to terms and conditions
+                                                            As informações estão corretas?
                                                         </label>
                                                         <div class="invalid-feedback">
-                                                            You must agree before submitting.
+                                                            Você, precisa confirma, se as informações estão corretas!
                                                         </div>
                                                     </div>
                                                 </div>
