--- a/dashboard-influencer.html
+++ b/dashboard-influencer.html
@@ -21,7 +21,7 @@
     <!-- ============================================================== -->
     <!-- main wrapper -->
     <!-- ============================================================== -->
-    <div class="dashboard-main-wrapper">
+   
 	     <!-- ============================================================== -->
         <!-- navbar -->
         <!-- ============================================================== -->
@@ -630,6 +630,7 @@
 	                        <!-- ============================================================== -->
 	                        <!-- followers by gender   -->
 	                        <!-- ============================================================== -->
+							<!-- barra de grafico lateral fino -->
 	                        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
 	                            <div class="card">
 	                                <h5 class="card-header">Followers by Gender</h5>
@@ -654,75 +655,77 @@
 	                        <!-- ============================================================== -->
 	                        <!-- followers by age   -->
 	                        <!-- ============================================================== -->
-	                        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12">
-	                            <div class="card">
-	                                <h5 class="card-header">Followers by Age</h5>
-	                                <div class="card-body">
-	                                    <div class="mb-3">
-	                                        <div class="d-inline-block">
-	                                            <h4 class="mb-0">15 - 20</h4>
-	                                        </div>
-	                                        <div class="progress mt-2 float-right progress-md">
-	                                            <div class="progress-bar bg-secondary" role="progressbar" style="width: 45%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-	                                        </div>
-	                                    </div>
-	                                    <div class="mb-3">
-	                                        <div class="d-inline-block">
-	                                            <h4 class="mb-0">20 - 25</h4>
-	                                        </div>
-	                                        <div class="progress mt-2 float-right progress-md">
-	                                            <div class="progress-bar bg-secondary" role="progressbar" style="width: 55%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-	                                        </div>
-	                                    </div>
-	                                    <div class="mb-3">
-	                                        <div class="d-inline-block">
-	                                            <h4 class="mb-0">25 - 30</h4>
-	                                        </div>
-	                                        <div class="progress mt-2 float-right progress-md">
-	                                            <div class="progress-bar bg-secondary" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-	                                        </div>
-	                                    </div>
-	                                    <div class="mb-3">
-	                                        <div class="d-inline-block">
-	                                            <h4 class="mb-0">30 - 35</h4>
-	                                        </div>
-	                                        <div class="progress mt-2 float-right progress-md">
-	                                            <div class="progress-bar bg-secondary" role="progressbar" style="width: 35%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-	                                        </div>
-	                                    </div>
-	                                    <div class="mb-3">
-	                                        <div class="d-inline-block">
-	                                            <h4 class="mb-0">35 - 40</h4>
-	                                        </div>
-	                                        <div class="progress mt-2 float-right progress-md">
-	                                            <div class="progress-bar bg-secondary" role="progressbar" style="width: 21%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-	                                        </div>
-	                                    </div>
-	                                    <div class="mb-3">
-	                                        <div class="d-inline-block">
-	                                            <h4 class="mb-0">45 - 50</h4>
-	                                        </div>
-	                                        <div class="progress mt-2 float-right progress-md">
-	                                            <div class="progress-bar bg-secondary" role="progressbar" style="width: 85%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-	                                        </div>
-	                                    </div>
-	                                    <div class="mb-3">
-	                                        <div class="d-inline-block">
-	                                            <h4 class="mb-0">50 - 55</h4>
-	                                        </div>
-	                                        <div class="progress mt-2 float-right progress-md">
-	                                            <div class="progress-bar bg-secondary" role="progressbar" style="width: 25%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-	                                        </div>
-	                                    </div>
-	                                </div>
-	                            </div>
-	                        </div>
-	                        <!-- ============================================================== -->
-	                        <!-- end followers by age   -->
+						<!-- grafico lateral fino -->
+						<!-- ============================================================== -->
+						<!-- end followers by age   -->
+						<div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12">
+							<div class="card">
+								<h5 class="card-header">Followers by Age</h5>
+								<div class="card-body">
+									<div class="mb-3">
+										<div class="d-inline-block">
+											<h4 class="mb-0">15 - 20</h4>
+										</div>
+										<div class="progress mt-2 float-right progress-md">
+											<div class="progress-bar bg-secondary" role="progressbar" style="width: 60%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+									<div class="mb-3">
+										<div class="d-inline-block">
+											<h4 class="mb-0">20 - 25</h4>
+										</div>
+										<div class="progress mt-2 float-right progress-md">
+											<div class="progress-bar bg-secondary" role="progressbar" style="width: 55%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+									<div class="mb-3">
+										<div class="d-inline-block">
+											<h4 class="mb-0">25 - 30</h4>
+										</div>
+										<div class="progress mt-2 float-right progress-md">
+											<div class="progress-bar bg-secondary" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+									<div class="mb-3">
+										<div class="d-inline-block">
+											<h4 class="mb-0">30 - 35</h4>
+										</div>
+										<div class="progress mt-2 float-right progress-md">
+											<div class="progress-bar bg-secondary" role="progressbar" style="width: 35%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+									<div class="mb-3">
+										<div class="d-inline-block">
+											<h4 class="mb-0">35 - 40</h4>
+										</div>
+										<div class="progress mt-2 float-right progress-md">
+											<div class="progress-bar bg-secondary" role="progressbar" style="width: 21%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+									<div class="mb-3">
+										<div class="d-inline-block">
+											<h4 class="mb-0">45 - 50</h4>
+										</div>
+										<div class="progress mt-2 float-right progress-md">
+											<div class="progress-bar bg-secondary" role="progressbar" style="width: 85%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+									<div class="mb-3">
+										<div class="d-inline-block">
+											<h4 class="mb-0">50 - 55</h4>
+										</div>
+										<div class="progress mt-2 float-right progress-md">
+											<div class="progress-bar bg-secondary" role="progressbar" style="width: 25%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 	                        <!-- ============================================================== -->
 	                        <!-- ============================================================== -->
 	                        <!-- followers by locations   -->
 	                        <!-- ============================================================== -->
+							<!-- grafico de barra lateral -->
 	                        <div class="col-xl-5 col-lg-12 col-md-6 col-sm-12 col-12">
 	                            <div class="card">
 	                                <h5 class="card-header">Top Folllowes by Locations </h5>
