limpeza-otimizando-api
Alguns ajuste, testando api no grafico, e limpando algumas linhas de codigo

--- a/pages/regras_de_negocio.html
+++ b/pages/regras_de_negocio.html
@@ -539,7 +539,7 @@
     <script src="../chart_js/bootstrap.bundle.js"></script>
     <script src="../chart_js/jquery.slimscroll.js"></script>
     <script src="../chart_js/main-js.js"></script>
-    <script src="../assets/vendor/timeline/js/main.js"></script>
+    <script src="../chart_js/main.js"></script>
 </body>
 
  
