Revert "limpeza-otimizando-api"
This reverts commit 24fa724a748f53f7285ba280d3c7602120e91176.

--- a/pages/configuracao.html
+++ b/pages/configuracao.html
@@ -494,10 +494,10 @@
     <script src="../chart_js/main-js.js"></script>
    
     <!-- This Page JS -->
-    <script src="../chart_js/jquery-asColor.min.js"></script>
-    <script src="../chart_js/jquery-asGradient.js"></script>
-    <script src="../chart_js/jquery-asColorPicker.min.js"></script>
-    <script src="../chart_js/jquery.minicolors.min.js"></script>
+    <script src="../assets/vendor/bootstrap-colorpicker/jquery-asColor/dist/jquery-asColor.min.js"></script>
+    <script src="../assets/vendor/bootstrap-colorpicker/jquery-asGradient/dist/jquery-asGradient.js"></script>
+    <script src="../assets/vendor/bootstrap-colorpicker/jquery-asColorPicker/dist/jquery-asColorPicker.min.js"></script>
+    <script src="../assets/vendor/bootstrap-colorpicker/%40claviska/jquery-minicolors/jquery.minicolors.min.js"></script>
     <script>
     $('.demo').each(function() {
         //
