--- a/pages/configuracao.html
+++ b/pages/configuracao.html
@@ -11,7 +11,7 @@
     <link href="../css_dash/fonts/circular-std/style.css" rel="stylesheet"><link rel="stylesheet" href="../css_dash/caixa_estilo.css">
     
     <link rel="stylesheet" href="../css_dash/fonts/fontawesome/css/fontawesome-all.css">
-    <link href="../assets/vendor/bootstrap-colorpicker/%40claviska/jquery-minicolors/jquery.minicolors.css" rel="stylesheet">
+    <link href="../css_dash/jquery.minicolors.css" rel="stylesheet">
     <link rel="icon" href="img/vagas.ico" type="image/png">
     <title>VAGASPARK</title>
 </head>
@@ -494,12 +494,12 @@
     <script src="../chart_js/main-js.js"></script>
    
     <!-- This Page JS -->
-    <script src="../assets/vendor/bootstrap-colorpicker/jquery-asColor/dist/jquery-asColor.min.js"></script>
-    <script src="../assets/vendor/bootstrap-colorpicker/jquery-asGradient/dist/jquery-asGradient.js"></script>
-    <script src="../assets/vendor/bootstrap-colorpicker/jquery-asColorPicker/dist/jquery-asColorPicker.min.js"></script>
-    <script src="../assets/vendor/bootstrap-colorpicker/%40claviska/jquery-minicolors/jquery.minicolors.min.js"></script>
+    <script src="../chart_js/jquery-asColor.min.js"></script>
+    <script src="../chart_js/jquery-asGradient.js"></script>
+    <script src="../chart_js/jquery-asColorPicker.min.js"></script>
+    <script src="../chart_js/jquery.minicolors.min.js"></script>
     <script>
-    $('.demo').each(function() {
+   $('.demo').each(function() {
         //
         // Dear reader, it's actually very easy to initialize MiniColors. For example:
         //
