--- a/detalhamento_servico_tabela.html
+++ b/detalhamento_servico_tabela.html
@@ -179,7 +179,7 @@
                                     <a class="nav-link" href="/dashboard_tcc/profile_empresa.html">Detalhamento</a>
                                 </li>
                                  <li class="nav-item">
-                                        <a class="nav-link" href="/dashboard_tcc/nota_gastos.htmll">Planilha</a>
+                                        <a class="nav-link" href="/dashboard_tcc/nota_gastos.html">Planilha</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" >vazio </a>
@@ -217,9 +217,6 @@
             </nav>
         </div>
     </div>
-             <!-- navbar e lateral do menu -->
-     <!-- ============================================================== -->
-        <!-- FIM DO MENU LATERAL @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
         <!-- ============================================================== -->
         <!-- end left sidebar -->
         <!-- ============================================================== -->
@@ -234,14 +231,14 @@
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="page-header">
-                            <h2 class="pageheader-title">General Tables </h2>
+                            <h2 class="pageheader-title">Detalhamento de Serviços</h2>
                             <p class="pageheader-text">Proin placerat ante duiullam scelerisque a velit ac porta, fusce sit amet vestibulum mi. Morbi lobortis pulvinar quam.</p>
                             <div class="page-breadcrumb">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Dashboard</a></li>
-                                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Tables</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">General Tables</li>
+                                        <li class="breadcrumb-item"><a href="/dashboard_tcc/" class="breadcrumb-link">Dashboard</a></li>
+                                        <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Área Cliente</a></li>
+                                        <li class="breadcrumb-item active" aria-current="page">Gerenciador de Tabelas</li>
                                     </ol>
                                 </nav>
                             </div>
@@ -254,11 +251,11 @@
                
                     <div class="row">
                         <!-- ============================================================== -->
-                        <!-- basic table -->
+                        <!-- Tabelas de Carros -->
                         <!-- ============================================================== -->
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                             <div class="card">
-                                <h5 class="card-header">Basic Table</h5>
+                                <h5 class="card-header">Tabelas de Carros</h5>
                                 <div class="card-body">
                                     <table class="table">
                                         <thead>
@@ -297,11 +294,11 @@
                         <!-- end basic table -->
                         <!-- ============================================================== -->
                         <!-- ============================================================== -->
-                        <!-- striped table -->
+                        <!-- Motos -->
                         <!-- ============================================================== -->
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                             <div class="card">
-                                <h5 class="card-header">Striped Table</h5>
+                                <h5 class="card-header">Motos</h5>
                                 <div class="card-body">
                                     <table class="table table-striped">
                                         <thead>
@@ -342,11 +339,11 @@
                     </div>
                     <div class="row">
                         <!-- ============================================================== -->
-                        <!-- bordered table -->
+                        <!-- tabela de Bicicleta -->
                         <!-- ============================================================== -->
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                             <div class="card">
-                                <h5 class="card-header">Bordered Table</h5>
+                                <h5 class="card-header">tabela de Bicicleta</h5>
                                 <div class="card-body">
                                     <table class="table table-bordered">
                                         <thead>
@@ -384,11 +381,11 @@
                         <!-- end bordered table -->
                         <!-- ============================================================== -->
                         <!-- ============================================================== -->
-                        <!-- hoverable table -->
+                        <!-- Tabela de Patins -->
                         <!-- ============================================================== -->
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                             <div class="card">
-                                <h5 class="card-header">Hoverable Table</h5>
+                                <h5 class="card-header">Tabela de Patins</h5>
                                 <div class="card-body">
                                     <table class="table table-hover">
                                         <thead>
@@ -432,7 +429,7 @@
                         <!-- ============================================================== -->
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                             <div class="card">
-                                <h5 class="card-header">Contextual classes</h5>
+                                <h5 class="card-header">Status das Vagas</h5>
                                 <div class="card-body">
                                     <table class="table">
                                         <thead>
@@ -474,7 +471,7 @@
                         <!-- ============================================================== -->
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                             <div class="card">
-                                <h5 class="card-header">Responsive Table</h5>
+                                <h5 class="card-header">tabela de Vagas Mista</h5>
                                 <div class="card-body">
                                     <div class="table-responsive ">
                                         <table class="table">
