correção do navbar dropd

--- a/configuracao.html
+++ b/configuracao.html
@@ -182,7 +182,7 @@
                                     <a class="nav-link" href="/dashboard_tcc/profile_empresa.html">Detalhamento</a>
                                 </li>
                                  <li class="nav-item">
-                                        <a class="nav-link" href="/dashboard_tcc/nota_gastos.htmll">Planilha</a>
+                                        <a class="nav-link" href="/dashboard_tcc/nota_gastos.html">Planilha</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" >vazio </a>
