Revert "DASCHBOARD PRONTA 03 - REGRAS DE NEGOCIO"
This reverts commit b9f57aa727814f24c0efd8e96b9080b6d1ac360c.

--- a/regras_de_negocio.html
+++ b/regras_de_negocio.html
@@ -264,114 +264,84 @@
                         <div class="cd-timeline__container">
                             <div class="cd-timeline__block js-cd-block">
                                 <div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
-                                    <img src="img/passos.png" alt="Picture">
+                                    <img src="assets/vendor/timeline/img/cd-icon-picture.svg" alt="Picture">
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Primeiro acesso:</h3>
-                                    <p>O acesso inicial ao sistema não requear experiência ou ter conhecimento em RH para fazer um  cadastro completo de usuário, em pouco tempo já consegui mexer no sistema, garantindo a segurança e a integridade dos dados.</p>
-                                    <a href="adm.php" class="btn btn-primary btn-lg">Saiba mais</a>
-                                    <span class="cd-timeline__date">10 Janeiro, 2023</span>
+                                    <h3>Title of section 1</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                                    <a href="#0" class="btn btn-primary btn-lg">Read More</a>
+                                    <span class="cd-timeline__date">12 July, 2016</span>
                                 </div>
                                 <!-- cd-timeline__content -->
                             </div>
                             <!-- cd-timeline__block -->
                             <div class="cd-timeline__block js-cd-block">
                                 <div class="cd-timeline__img cd-timeline__img--movie js-cd-img">
-                                    <img src="img/cadastro_semd.png" alt="Movie">
+                                    <img src="assets/vendor/timeline/img/cd-icon-movie.svg" alt="Movie">
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Gerenciamento de cadastro:</h3>
-                                    <p>O sistema permite a adição, edição e exclusão de usuários de forma intuitiva e segura, garantindo a integridade e a privacidade das informações dos usuários.</p>
-                                 <a href="comando_php/data-tables.php" class="btn btn-primary btn-lg">Saiba mais</a>
-                                    <span class="cd-timeline__date">20 Janeiro, 2023</span>
+                                    <h3>Title of section 2</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+                                 <a href="#0" class="btn btn-primary btn-lg">Read More</a>
+                                    <span class="cd-timeline__date">20 July, 2017</span>
                                 </div>
                                 <!-- cd-timeline__content -->
                             </div>
                             <!-- cd-timeline__block -->
                             <div class="cd-timeline__block js-cd-block">
                                 <div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
-                                    <img src="img/visaosem.png" alt="Picture">
+                                    <img src="assets/vendor/timeline/img/cd-icon-picture.svg" alt="Picture">
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Visão do dashboard:</h3>
-                                    <p>A visão do dashboard é projetada de forma abrangente, oferecendo uma visão panorâmica e detalhada das atividades do estacionamento, com informações relevantes apresentadas em gráficos interativos </p>
-                                  <a href="cards.html" class="btn btn-primary btn-lg">Saiba mais</a>
-                                    <span class="cd-timeline__date">04 Fervereiro, 2023</span>
+                                    <h3>Title of section 3</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+                                  <a href="#0" class="btn btn-primary btn-lg">Read More</a>
+                                    <span class="cd-timeline__date">24 July, 2018</span>
                                 </div>
                                 <!-- cd-timeline__content -->
                             </div>
                             <!-- cd-timeline__block -->
                             <div class="cd-timeline__block js-cd-block">
                                 <div class="cd-timeline__img cd-timeline__img--location js-cd-img">
-                                    <img src="img/mapa_va.png" alt="Location">
+                                    <img src="assets/vendor/timeline/img/cd-icon-location.svg" alt="Location">
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Gráficos e mapa:</h3>
-                                    <p>O sistema apresenta gráficos interativos e visualmente atraentes, oferecendo informações detalhadas sobre a ocupação do estacionamento, além de um mapa intuitivo para visualização da localização das vagas.</p>
-                                 <a href="#0" class="btn btn-primary btn-lg">Saiba mais</a>
-                                    <span class="cd-timeline__date">12 Fervereiro, 2023</span>
+                                    <h3>Title of section 4</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                                 <a href="#0" class="btn btn-primary btn-lg">Read More</a>
+                                    <span class="cd-timeline__date">12 September, 2018</span>
                                 </div>
                                 <!-- cd-timeline__content -->
                             </div>
                             <!-- cd-timeline__block -->
                             <div class="cd-timeline__block js-cd-block">
-                                <div class="cd-timeline__img cd-timeline__img--movie js-cd-img">
-                                    <img src="img/gestenci_esta.png" alt="Location">
+                                <div class="cd-timeline__img cd-timeline__img--location js-cd-img">
+                                    <img src="assets/vendor/timeline/img/cd-icon-location.svg" alt="Location">
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Gerenciar estacionamento:</h3>
-                                    <p>Através do dashboard, é possível gerenciar as vagas disponíveis, monitorar a ocupação em tempo real, visualizar a localização das vagas em um mapa intuitivo e ter um controle preciso do cadastro de usuários, garantindo um gerenciamento eficiente e centralizado.</p>
-                                 <a href="index.php" class="btn btn-primary btn-lg">Saiba mais</a>
+                                    <h3>Title of section 5</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+                                 <a href="#0" class="btn btn-primary btn-lg">Read More</a>
                                    
-                                    <span class="cd-timeline__date">05 Março, 2023</span>
+                                    <span class="cd-timeline__date">20 September, 2018</span>
                                 </div>
                                 <!-- cd-timeline__content -->
                             </div>
-                            <!-- cd-timeline__block -->
-                            <div class="cd-timeline__block js-cd-block">
-                                <div class="cd-timeline__img cd-timeline__img--location js-cd-img">
-                                    <img src="img/estaci002.png" alt="Movie">
-                                </div>
-                                <!-- cd-timeline__img -->
-                                <div class="cd-timeline__content js-cd-content">
-                                    <h3>Controle de vagas:</h3>
-                                    <p>Com recursos gráficos avançados, o sistema proporciona uma análise aprofundada do uso do estacionamento, permitindo tomadas de decisões estratégicas com base em dados concretos.</p>
-                                    <a href="vagas_detalhes.php" class="btn btn-primary btn-lg">Saiba mais</a>
-                                    <span class="cd-timeline__date">04 Abril, 2023</span>
-                                </div>
-                                <!-- cd-timeline__content -->
-                            </div>
-                            <!-- cd-timeline__block -->
                             <!-- cd-timeline__block -->
                             <div class="cd-timeline__block js-cd-block">
                                 <div class="cd-timeline__img cd-timeline__img--movie js-cd-img">
-                                    <img src="img/ferramenta.png" alt="Movie">
+                                    <img src="assets/vendor/timeline/img/cd-icon-movie.svg" alt="Movie">
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Configurações:</h3>
-                                    <p>Configurar um sistema simples e intuitivo, com interface de usuário amigável, fluxos de navegação claros e recursos de fácil compreensão, visando tornar a utilização do software fácil e intuitiva para os usuários, mesmo sem experiência prévia no sistema.</p>
-                                    <a href="configuracao.html" class="btn btn-primary btn-lg">Saiba mais</a>
-                                    <span class="cd-timeline__date">15 Abril, 2023</span>
-                                </div>
-                                <!-- cd-timeline__content -->
-                            </div>
-                            <!-- cd-timeline__block -->
-                            <!-- cd-timeline__block -->
-                            <div class="cd-timeline__block js-cd-block">
-                                <div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
-                                    <img src="img/equipe01.png" alt="Movie">
-                                </div>
-                                <!-- cd-timeline__img -->
-                                <div class="cd-timeline__content js-cd-content">
-                                    <h3>Nossa Equipe:</h3>
-                                    <strong style='font-size: 17px;'>Sistema conta com um suporte eficiente de humanos, composto por uma equipe de atendimento dedicada, pronta para auxiliar os usuários em caso de dúvidas, problemas técnicos ou necessidade de suporte adicional.</strong><br><br>Esse suporte é realizado de forma rápida e personalizada, visando garantir a satisfação e a confiança dos usuários no sistema, oferecendo um atendimento humanizado e resolutivo.</p>
-                                    <span class="cd-timeline__date">19 Abril, 2023</span>
+                                    <h3>Final Section</h3>
+                                    <p>This is the content of the last section</p>
+                                    <span class="cd-timeline__date">1 October, 2018</span>
                                 </div>
                                 <!-- cd-timeline__content -->
                             </div>
@@ -395,9 +365,9 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                         <div class="text-md-right footer-links d-none d-sm-block">
-                            <a href="javascript: void(0);">Voltar</a>
-                            <a href="javascript: void(0);">Suporte</a>
-                            <a href="javascript: void(0);">Contato</a>
+                            <a href="javascript: void(0);">About</a>
+                            <a href="javascript: void(0);">Support</a>
+                            <a href="javascript: void(0);">Contact Us</a>
                         </div>
                     </div>
                 </div>
