DASCHBOARD melhorias textual
Melhoria em alguns texto e tamanho,
amanha apresentação

--- a/regras_de_negocio.html
+++ b/regras_de_negocio.html
@@ -260,7 +260,7 @@
                     <!-- timeline  -->
                     <!-- ============================================================== -->
                 
-                    <section class="cd-timeline js-cd-timeline">
+                    <section class="cd-timeline js-cd-timeline" style='font-size: 20px;'>
                         <div class="cd-timeline__container">
                             <div class="cd-timeline__block js-cd-block">
                                 <div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
@@ -268,7 +268,7 @@
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Primeiro acesso:</h3>
+                                    <h2>Primeiro acesso</h2><hr>
                                     <p>O acesso inicial ao sistema não requear experiência ou ter conhecimento em RH para fazer um  cadastro completo de usuário, em pouco tempo já consegui mexer no sistema, garantindo a segurança e a integridade dos dados.</p>
                                     <a href="adm.php" class="btn btn-primary btn-lg">Saiba mais</a>
                                     <span class="cd-timeline__date">10 Janeiro, 2023</span>
@@ -282,7 +282,7 @@
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Gerenciamento de cadastro:</h3>
+                                    <h2>Gerenciamento de cadastro</h2><hr>
                                     <p>O sistema permite a adição, edição e exclusão de usuários de forma intuitiva e segura, garantindo a integridade e a privacidade das informações dos usuários.</p>
                                  <a href="comando_php/data-tables.php" class="btn btn-primary btn-lg">Saiba mais</a>
                                     <span class="cd-timeline__date">20 Janeiro, 2023</span>
@@ -296,7 +296,7 @@
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Visão do dashboard:</h3>
+                                    <h2>Visão do dashboard</h2><hr>
                                     <p>A visão do dashboard é projetada de forma abrangente, oferecendo uma visão panorâmica e detalhada das atividades do estacionamento, com informações relevantes apresentadas em gráficos interativos </p>
                                   <a href="cards.html" class="btn btn-primary btn-lg">Saiba mais</a>
                                     <span class="cd-timeline__date">04 Fervereiro, 2023</span>
@@ -310,7 +310,7 @@
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Gráficos e mapa:</h3>
+                                    <h2>Gráficos e mapa</h2><hr>
                                     <p>O sistema apresenta gráficos interativos e visualmente atraentes, oferecendo informações detalhadas sobre a ocupação do estacionamento, além de um mapa intuitivo para visualização da localização das vagas.</p>
                                  <a href="#0" class="btn btn-primary btn-lg">Saiba mais</a>
                                     <span class="cd-timeline__date">12 Fervereiro, 2023</span>
@@ -324,9 +324,9 @@
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Gerenciar estacionamento:</h3>
+                                    <h2>Gerenciar estacionamento</h2><hr>
                                     <p>Através do dashboard, é possível gerenciar as vagas disponíveis, monitorar a ocupação em tempo real, visualizar a localização das vagas em um mapa intuitivo e ter um controle preciso do cadastro de usuários, garantindo um gerenciamento eficiente e centralizado.</p>
-                                 <a href="index.php" class="btn btn-primary btn-lg">Saiba mais</a>
+                                 <a href="index.php" class="btn btn-primary btn-lg" >Saiba mais</a>
                                    
                                     <span class="cd-timeline__date">05 Março, 2023</span>
                                 </div>
@@ -339,7 +339,7 @@
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Controle de vagas:</h3>
+                                    <h2Controle de vagas</h2><hr>
                                     <p>Com recursos gráficos avançados, o sistema proporciona uma análise aprofundada do uso do estacionamento, permitindo tomadas de decisões estratégicas com base em dados concretos.</p>
                                     <a href="vagas_detalhes.php" class="btn btn-primary btn-lg">Saiba mais</a>
                                     <span class="cd-timeline__date">04 Abril, 2023</span>
@@ -354,9 +354,9 @@
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Configurações:</h3>
+                                    <h2>Configurações</h2><hr>
                                     <p>Configurar um sistema simples e intuitivo, com interface de usuário amigável, fluxos de navegação claros e recursos de fácil compreensão, visando tornar a utilização do software fácil e intuitiva para os usuários, mesmo sem experiência prévia no sistema.</p>
-                                    <a href="configuracao.html" class="btn btn-primary btn-lg">Saiba mais</a>
+                                    <a href="configuracao.html" class="btn btn-primary btn-lg" >Saiba mais</a>
                                     <span class="cd-timeline__date">15 Abril, 2023</span>
                                 </div>
                                 <!-- cd-timeline__content -->
@@ -369,8 +369,8 @@
                                 </div>
                                 <!-- cd-timeline__img -->
                                 <div class="cd-timeline__content js-cd-content">
-                                    <h3>Nossa Equipe:</h3>
-                                    <strong style='font-size: 17px;'>Sistema conta com um suporte eficiente de humanos, composto por uma equipe de atendimento dedicada, pronta para auxiliar os usuários em caso de dúvidas, problemas técnicos ou necessidade de suporte adicional.</strong><br><br>Esse suporte é realizado de forma rápida e personalizada, visando garantir a satisfação e a confiança dos usuários no sistema, oferecendo um atendimento humanizado e resolutivo.</p>
+                                    <h2>Nossa Equipe</h2><hr>
+                                Sistema conta com um suporte eficiente de humanos, composto por uma equipe de atendimento dedicada, pronta para auxiliar os usuários em caso de dúvidas, problemas técnicos ou necessidade de suporte adicional.<br><br>Esse suporte é realizado de forma rápida e personalizada, visando garantir a satisfação e a confiança dos usuários no sistema, oferecendo um atendimento humanizado e resolutivo.</p>
                                     <span class="cd-timeline__date">19 Abril, 2023</span>
                                 </div>
                                 <!-- cd-timeline__content -->
