tabela relatorio-atividade pronto
proximo passo e tentar colocar checkboox para apagar mais de uma seleção

--- a/configuracao.html
+++ b/configuracao.html
@@ -206,6 +206,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/dashboard_tcc/adm.php" aria-expanded="false" data-target="#submenu-2"  ><i class="fa fa-fw fa-users"></i>Administrador</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link" href="/dashboard_tcc/relatorio_atividade.php" aria-expanded="false" data-target="#submenu-2"  ><i class="fa fa-fw fa-users"></i>Relatório de Atividade</a>
                         </li>
                         <li class="nav-divider">
                             Suporte
