--- a/teste.html
+++ b/teste.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <title>Exemplo de Modal com Imagem</title>
+    <!-- Inclua os estilos CSS necessários para o modal -->
+    <style>
+        /* Estilos para o modal */
+        .modal {
+            display: none; /* Inicialmente oculto */
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+
+        .modal img {
+            max-width: 90%;
+            max-height: 90%;
+            margin: auto;
+            display: block;
+        }
+
+        .modal .fechar {
+            color: #fff;
+            font-size: 36px;
+            font-weight: bold;
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
+    <!-- Botão para abrir o modal -->
+    <button onclick="abrirModal()">Abrir Modal</button>
 
-  <form class='needs-validation' novalidate action='comando_php/check_box_lixeira.php' method='POST'  id='contact_form'>
+    <!-- Modal -->
+    <div id="modal" class="modal">
+        <span onclick="fecharModal()" class="fechar">&times;</span>
+        <img id="imagemModal" src="" alt="Imagem do Modal">
+    </div>
 
-  <input type='submit' value='Apagar lixeira' name='DelLixeira'>
-    </from>
+    <!-- Script JavaScript para controlar o modal -->
+    <script>
+        // Função para abrir o modal e exibir a imagem
+        function abrirModal() {
+            var modal = document.getElementById("modal");
+            modal.style.display = "block";
+
+            // Atualiza a imagem do modal com a imagem desejada
+            var imagemModal = document.getElementById("imagemModal");
+            imagemModal.src = "login_acesso.png"; // Substitua "caminho_da_imagem.jpg" pelo caminho da sua imagem
+        }
+
+        // Função para fechar o modal
+        function fecharModal() {
+            var modal = document.getElementById("modal");
+            modal.style.display = "none";
+        }
+    </script>
 </body>
 </html>
