--- a/teste.html
+++ b/teste.html
@@ -32,6 +32,7 @@
             top: 20px;
             right: 30px;
             cursor: pointer;
+            text-align: center;
         }
     </style>
 </head>
